# simple-cpp-project

./: CMakeLists.txt
cmake/Modules/: FindCppUnit.cmake
src/: SimpleProject.cpp  SimpleProject.h  main.cpp
test/: SimpleProjectTest.cpp  SimpleProjectTest.h  main.cpp
