cmake_minimum_required(VERSION 3.5)
project(simple_project)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

SET(PROJECT_ROOT_PATH .)
SET(PROJECT_SOURCE_PATH ${PROJECT_ROOT_PATH}/src)
SET(PROJECT_TEST_SOURCE_PATH ${PROJECT_ROOT_PATH}/test)
SET(PROJECT_BIN_PATH ${PROJECT_ROOT_PATH}/bin)
SET(PROJECT_EXEC_NAME simple_project)
SET(PROJECT_LIB_NAME simple_project_lib)
SET(PROJECT_TEST_EXEC_NAME simple_project_test)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BIN_PATH})

SET(SHARED_SOURCES ${PROJECT_SOURCE_PATH}/SimpleProject.cpp ${PROJECT_SOURCE_PATH}/SimpleProject.h)

SET(PROJECT_SOURCE_FILES ${PROJECT_SOURCE_PATH}/main.cpp ${SHARED_SOURCES})

FIND_PACKAGE(CppUnit REQUIRED)
SET(PROJECT_TEST_SOURCE_FILES
        ${CPPUNIT_INCLUDE_DIR} ${SHARED_SOURCES}
        ${PROJECT_TEST_SOURCE_PATH}/main.cpp
        ${PROJECT_TEST_SOURCE_PATH}/SimpleProjectTest.cpp
        ${PROJECT_TEST_SOURCE_PATH}/SimpleProjectTest.h
        )

MESSAGE(STATUS ${SHARED_SOURCES})

ADD_EXECUTABLE(${PROJECT_EXEC_NAME} ${PROJECT_SOURCE_FILES})
ADD_EXECUTABLE(${PROJECT_TEST_EXEC_NAME} ${PROJECT_TEST_SOURCE_FILES} )

TARGET_LINK_LIBRARIES (${PROJECT_TEST_EXEC_NAME} ${CPPUNIT_LIBRARY})